[tool.poetry]
name = "async-firebase"
version = "4.1.0"
description = "Async Firebase Client - a Python asyncio client to interact with Firebase Cloud Messaging in an easy way."
license = "MIT"
authors = [
    "Oleksandr Omyshev <oomyshev@healthjoy.com>"
]
maintainers = [
    "Healthjoy Developers <developers@healthjoy.com>",
    "Oleksandr Omyshev <oomyshev@healthjoy.com>"
]
readme = "README.md"
repository = "https://github.com/healthjoy/async-firebase"
keywords = ["async", "asyncio", "firebase", "fcm", "python3", "push-notifications"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

google-auth = "~2.38.0"
httpx = { version = ">=0.28.1,<1.0.0", extras = ["http2"] }
h11 = { version = ">=0.16.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "~4.2"
cryptography = { version = "~44.0.2", python = ">3.9.0,<3.9.1 || >3.9.1,<3.14" }
Faker = "~15.3"

# tests
pytest = "~8.3"
pytest-asyncio = "~0.26"
pytest-benchmark = "~5.1.0"
pytest-cov = "~6.1.1"
pytest-freezegun = "~0.4.2"
pytest-httpx = "~0.35"
black = "^24.3.0"
mypy = "~1.15.0"

[tool.isort]
atomic = true
known_third_party = [
    "cryptography", "faker", "google", "httpx", "pytest", "pytest_httpx"
]
sections = [
    "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
known_first_party = ["async_firebase", "tests"]
no_lines_before = "STDLIB"
default_section = "FIRSTPARTY"
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
ensure_newline_before_comments = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
