[project]
name = "async-firebase"
version = "6.1.1"
description = "Async Firebase Client - a Python asyncio client to interact with Firebase Cloud Messaging in an easy way."
license = "MIT"
authors = [
    { name = "Oleksandr Omyshev", email = "oomyshev@healthjoy.com" },
]
maintainers = [
    { name = "Healthjoy Developers", email = "developers@healthjoy.com" },
    { name = "Oleksandr Omyshev", email = "oomyshev@healthjoy.com" },
]
readme = "README.md"
keywords = ["async", "asyncio", "firebase", "fcm", "python3", "push-notifications"]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-auth>=2.38,<2.53",
    "httpx[http2]>=0.28.1,<1.0.0",
    "h11>=0.16.0",
]

[project.urls]
Repository = "https://github.com/healthjoy/async-firebase"

[project.optional-dependencies]
dev = [
    "pre-commit~=4.2",
    "cryptography>=46.0.7,<46.1.0",
    "Faker>=15.3,<41.0",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.26,<2.0",
    "pytest-benchmark>=5.1,<5.3",
    "pytest-cov>=6.1.1,<7.2.0",
    "pytest-freezer~=0.4.9",
    "pytest-httpx~=0.35",
    "ruff>=0.9.6",
    "mypy>=1.15,<1.21",
]

[tool.pytest.ini_options]
addopts = "--pyargs -ra --no-cov-on-fail --disable-pytest-warnings --cache-clear --cov=async_firebase --cov-config=pyproject.toml --cov-branch --cov-report=xml --cov-report=term"
norecursedirs = [
    ".eggs",
    "*.egg",
    ".ropeproject",
    "build",
]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services (FCM) and require credentials",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
console_output_style = "progress"

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
ignore_missing_imports = true

[tool.coverage.run]
source = ["./async_firebase"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "pragma: no cover",
    "Should not reach here",
    "def __repr__",
    "except ImportError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["async_firebase", "tests"]
known-third-party = ["cryptography", "faker", "google", "httpx", "pytest", "pytest_httpx"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
